<resources>
    <string name="app_name">Repjegyek</string>
    <string name="name">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">User name</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Postai Cím</string>
    <string name="google_sign_in">Bejelentkezés Google fiókkal</string>
    <string name="guest_sign_in">Bejelentkezés vendégként</string>

    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Infó a termékről</string>
    <string name="product_description">Termék leírása.</string>
    <string name="search">Keresés</string>
    <string name="log_out">Kijelentkezés</string>
    <string name="settings">Beállítások</string>
    <string name="view">Nézetek</string>
    <string name="to_cart">Kosárba</string>
    <string name="delete">Törlés</string>

    <string-array name="phone_modes">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>


    <string-array name="shopping_item_names">
        <item>Budapest-London jegy</item>
        <item>Budapest-Köln jegy</item>
        <item>Budapest-Bali jegy</item>
        <item>Budapest-Kerry jegy</item>
        <item>Budapest-Syndey jegy</item>
        <item>Budapest-Marrakesh jegy</item>
        <item>Budapest-Párizs jegy</item>
        <item>Budapest-Dubaj jegy</item>
        <item>Budapest-Dubrovnik jegy</item>
        <item>Budapest-Róma jegy</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>Ez egy jegy Londonba.</item>
        <item>Ez egy jegy Kölnbe.</item>
        <item>Ez egy jegy Balira.</item>
        <item>Ez egy jegy Kerrybe.</item>
        <item>Ez egy jegy Sydneybe.</item>
        <item>Ez egy jegy Marrakeshbe.</item>
        <item>Ez egy jegy Párizsba.</item>
        <item>Ez egy jegy Dubajba.</item>
        <item>Ez egy jegy Dubrovnikba.</item>
        <item>Ez egy jegy Rómába.</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>3.5</item>
        <item>5</item>
        <item>4</item>
        <item>1.5</item>
        <item>5</item>
        <item>3</item>
        <item>4.5</item>
        <item>4</item>
        <item>5</item>
        <item>2.5</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/london</item>
        <item>@drawable/koln</item>
        <item>@drawable/bali</item>
        <item>@drawable/kerry</item>
        <item>@drawable/sydney</item>
        <item>@drawable/marrakesh</item>
        <item>@drawable/paris</item>
        <item>@drawable/dubai</item>
        <item>@drawable/dubrovnik</item>
        <item>@drawable/roma</item>
    </array>

    <array name="shopping_item_price">
        <item>100 Dv</item>
        <item>150 Dv</item>
        <item>500 Dv</item>
        <item>300 Dv</item>
        <item>180 Dv</item>
        <item>70 Dv</item>
        <item>20 Dv</item>
        <item>30 Dv</item>
        <item>15 Dv</item>
        <item>90 Dv</item>
    </array>

</resources>