<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView">

    </item>

    <item
        android:id="@+id/cart"
        android:title="@string/search"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always"
        app:actionLayout="@layout/custom_menu_item">

    </item>

    <item
        android:id="@+id/view_selector"
        android:title="@string/view"
        android:icon="@drawable/ic_view_grid"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/log_out_button"
        app:showAsAction="never"
        android:title="@string/log_out"
        android:icon="@drawable/ic_exit"
        android:orderInCategory="2">

    </item>

    <item
        android:id="@+id/setting_button"
        android:title="@string/settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="1">

    </item>

</menu>