<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/registrationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/registration"
                android:textSize="24sp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ems="10"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/registrationTextView"
                />

            <EditText
                android:id="@+id/userEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ems="10"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/userNameEditText"
                />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ems="10"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/userEmailEditText"
                />

            <EditText
                android:id="@+id/passwordAgainEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ems="10"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:hint="@string/password_again"
                android:inputType="textPassword"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/passwordEditText"
                />


            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ems="10"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/passwordAgainEditText"
                />

            <Spinner
                android:id="@+id/phoneSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/phoneEditText"
                />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ems="10"
                android:maxLines="3"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:hint="@string/address"
                android:inputType="textPostalAddress|textMultiLine"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/phoneSpinner"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/addressEditText"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_centerHorizontal="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"
                    android:onClick="register"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginStart="40dp"
                    android:onClick="cancel"
                    />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>